syntax = "proto3";
package remote;
import "actor.proto";
// option go_package = "./remote_actor";

message MessageEnvelope {
  string type_name = 1;
  bytes message_data = 2;
  PID target = 3;
}

message Unit {}

service Remoting {
  rpc Receive (stream MessageEnvelope) returns (Unit) {}
}
